# voxel_game

./: .gitignore  Cargo.toml  Makefile.toml
src/: debug.rs  game.rs  main.rs  player.rs
src/debug/: systems.rs
src/player/resources/: controls.rs
src/world/: components.rs  database.rs  resources.rs  systems.rs
src/world/voxel_types/: stone.rs
voxel_game/: Cargo.toml
voxel_game/assets/: properties.voxels.toml
voxel_game/src/: game.rs  log.rs  main.rs  menu.rs  world.rs
voxel_game/src/debug/: components.rs
voxel_game/src/game/: components.rs  states.rs  systems.rs
voxel_game/src/menu/: components.rs  resources.rs  systems.rs
voxel_game/src/player/: components.rs  resources.rs  systems.rs
voxel_game/src/world/: components.rs  resources.rs  states.rs  systems.rs
