[package]
name = "voxel_game"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lugo"]

[dependencies]
bevy = { version = "0.12.0" }
bevy_atmosphere = { version = "0.7.0" }
bevy_vector_shapes = { version = "0.6.0" }
bevy_common_assets = { version = "0.8.0", features = ["toml"] }
# bevy_asset_loader = { version = "0.17.0" }

serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }
strum = { version = "0.25", features = ["derive"] }
rusqlite = { version = "0.29" }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { version = "1.0" }